force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/DM_Loan_Disbursal_Transaction__c.object-meta.xml
<CustomObject>
    <label>DM Loan Disbursal Transaction</label>
    <nameField>
        <label>DM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DM Loan Disbursal Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>