force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Bank Account</label>
    <referenceTo>loan__Bank_Account__c</referenceTo>
    <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>