force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Check__c.field-meta.xml
<CustomField>
    <fullName>DM_Check__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM Check</label>
    <referenceTo>loan__Check__c</referenceTo>
    <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>