force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>DM_CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DM CL Contract</label>
    <referenceTo>DM_Loan_Account__c</referenceTo>
    <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>