force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Cleared__c.field-meta.xml
<CustomField>
    <fullName>DM_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>