force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Custom_Field_3__c.field-meta.xml
<CustomField>
    <fullName>DM_Custom_Field_3__c</fullName>
    <label>DM Custom Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>