force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/Dm_Disbursal_Date__c.field-meta.xml
<CustomField>
    <fullName>Dm_Disbursal_Date__c</fullName>
    <label>Dm Disbursal Date</label>
    <type>Date</type>
</CustomField>