force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Disbursal_Time__c.field-meta.xml
<CustomField>
    <fullName>DM_Disbursal_Time__c</fullName>
    <label>Disbursal Time</label>
    <type>DateTime</type>
</CustomField>