force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Disbursed_Amt__c.field-meta.xml
<CustomField>
    <fullName>DM_Disbursed_Amt__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Disbursal Transaction Amount</description>
    <inlineHelpText>Disbursal Transaction Amount</inlineHelpText>
    <label>Disbursal Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>