force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Financed_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Financed_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Amount to be disbursed to borrower.</inlineHelpText>
    <label>Financed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>