force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Internal_Accounting_Generated__c.field-meta.xml
<CustomField>
    <fullName>DM_Internal_Accounting_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Accounting Generated</label>
    <type>Checkbox</type>
</CustomField>