force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Loan_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>DM_Loan_Snapshot__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <label>Loan Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>