force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/Dm_Mode_Of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Dm_Mode_Of_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dm Mode Of Payment</label>
    <referenceTo>loan__Payment_Mode__c</referenceTo>
    <relationshipLabel>DM Loan Disbursal Transactions</relationshipLabel>
    <relationshipName>DM_Loan_Disbursal_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>