force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Pre_Paid_Fee__c.field-meta.xml
<CustomField>
    <fullName>DM_Pre_Paid_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the sum of all prepaid fees defined on the contract.</inlineHelpText>
    <label>Total Pre-Paid Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>