force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Receipt_ID__c.field-meta.xml
<CustomField>
    <fullName>DM_Receipt_ID__c</fullName>
    <description>Receipt ID</description>
    <displayFormat>RID-{0000000000}</displayFormat>
    <inlineHelpText>Receipt ID</inlineHelpText>
    <label>Receipt ID</label>
    <type>AutoNumber</type>
</CustomField>