force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Reference__c.field-meta.xml
<CustomField>
    <fullName>DM_Reference__c</fullName>
    <label>Reference</label>
    <length>64</length>
    <type>Text</type>
</CustomField>