force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Refinanced_Amount__c.field-meta.xml
<CustomField>
    <fullName>DM_Refinanced_Amount__c</fullName>
    <inlineHelpText>Sum of the pay-off amounts of refinanced loan accounts</inlineHelpText>
    <label>Total Refinanced Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>