force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Reversed__c.field-meta.xml
<CustomField>
    <fullName>DM_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reversed</label>
    <type>Checkbox</type>
</CustomField>