force-app/main/default/objects/DM_Loan_Disbursal_Transaction__c/fields/DM_Sent_To_ACH__c.field-meta.xml
<CustomField>
    <fullName>DM_Sent_To_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent To ACH</label>
    <type>Checkbox</type>
</CustomField>